test/errors/traits/missing_instance_members/main.sk
module Main {

struct Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
    fn baz(self) -> ()
    fn baq(self) -> ()
    fn baf(self) -> () {

    }
}

instance BarImpl Bar[Foo] {
    fn bar(self) -> () {

    }
}

fn main() {
}

}